force-app/main/default/objects/Cut_Offs_Time__mdt/Cut_Offs_Time__mdt.object-meta.xml
<CustomObject>
    <label>Cut-Offs Time</label>
    <pluralLabel>Cut Off Times</pluralLabel>
</CustomObject>