force-app/main/default/objects/Cut_Offs_Time__mdt/fields/Community_Redeliver__c.field-meta.xml
<CustomField>
        <fullName>Community_Redeliver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Redeliver</label>
        <type>Checkbox</type>
    </CustomField>