force-app/main/default/objects/Cut_Offs_Time__mdt/fields/Cut_Off_Type__c.field-meta.xml
<CustomField>
        <fullName>Cut_Off_Type__c</fullName>
        <description>Type of deadline</description>
        <label>Cut Off Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Re-delivery</fullName>
                    <default>true</default>
                    <label>Re-delivery</label>
                </value>
                <value>
                    <fullName>Press Run</fullName>
                </value>
                <value>
                    <fullName>Carrier Memo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>