force-app/main/default/objects/Cut_Offs_Time__mdt/fields/Day_of_Week__c.field-meta.xml
<CustomField>
        <fullName>Day_of_Week__c</fullName>
        <description>Day of the week for the cut-off</description>
        <label>Day of Week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                    <default>true</default>
                    <label>Sunday</label>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>