force-app/main/default/objects/Cut_Offs_Time__mdt/fields/DayofWeekNumber__c.field-meta.xml
<CustomField>
        <fullName>DayofWeekNumber__c</fullName>
        <description>This is used to convert the date to a day of the week to use in flows</description>
        <label>Day of Week Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>