force-app/main/default/objects/Cut_Offs_Time__mdt/fields/Delivery_Type__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Type__c</fullName>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekday</fullName>
                    <default>true</default>
                    <label>Weekday</label>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Not Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>