force-app/main/default/objects/Cut_Offs_Time__mdt/fields/Hour__c.field-meta.xml
<CustomField>
        <fullName>Hour__c</fullName>
        <description>Hour of deadline</description>
        <label>Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>