force-app/main/default/objects/Cut_Offs_Time__mdt/fields/Minute__c.field-meta.xml
<CustomField>
        <fullName>Minute__c</fullName>
        <description>Minute of deadline</description>
        <label>Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>