force-app/main/default/objects/Cut_Offs_Time__mdt/fields/Sunday_Delivery__c.field-meta.xml
<CustomField>
        <fullName>Sunday_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday Delivery</label>
        <type>Checkbox</type>
    </CustomField>