force-app/main/default/objects/Cut_Offs_Time__mdt/listViews/all_w_detail.listView-meta.xml
<ListView>
        <fullName>all_w_detail</fullName>
        <columns>MasterLabel</columns>
        <columns>Day_of_Week__c</columns>
        <columns>Delivery_Type__c</columns>
        <columns>Hour__c</columns>
        <columns>Minute__c</columns>
        <columns>Cut_Off_Type__c</columns>
        <columns>DayofWeekNumber__c</columns>
        <columns>DeveloperName</columns>
        <filterScope>Everything</filterScope>
        <label>all w/ detail</label>
    </ListView>